--- a/index.html
+++ b/index.html
@@ -28,6 +28,22 @@
         </div>
     </header>
 
+    <main class="main-bg">
+        <div class="main">
+            <div class="content-main">
+                <div class="column-left">
+                <h1>Bicicletas feitas<br> sob medida.</h1>
+                <p>Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+                <input type="button" value="SELECIONE A SUA" class="btn-style">
+                </div>
+
+            <div class="img">
+                <img class="img-intro" src="./img/bicicleta/nimbus1.jpg" alt="bicicleta">
+            </div>
+            </div>
+        </div>
+    </main>
+
     
 </body>
 </html>
