RESPONSIVO section-bikes. 100%

--- a/index.html
+++ b/index.html
@@ -73,19 +73,26 @@
         </div>
     </section>
 
-    <section class="info">
+    <!-- <section class="info">
         <main class="info-bg">
+            <div class="itens-flex-info">
             <div class="column-left-info">
                 <p class="texto-alternativo-cinza">TECNOLOGIA AVANÇADA</p>
-                <h1 class="h1-preto">você escolhe as<br>suas cores e<br> componentes<span>.</span></h1>
+                <h1 class="h1-branco">você escolhe as<br>suas cores e<br> componentes<span>.</span></h1>
                 <p class="texto-alternativo-cinza">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
-                <p class="texto-amarelo-bold">ESCOLHA UM MODELO</p>
+                <a class="texto-amarelo-bold" href="#">ESCOLHA UM MODELO</a>
+                <div class="componentes-tecnologia">
+                    <p class="texto-pequeno-branco">Motor Elétrico</p>
+                    <span>Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</span>
+                </div>
             </div>
-
-            <img src="./img/" alt="">
+            <div class="img-tecnologia">
+            <img class="img-tecnologia" src="./img/fotos/tecnologia.jpg" alt="">
+            </div>
+            </div>
         </main>
 
-    </section>
+    </section> -->
 
     
 </body>
