TECNOLOGIA 100%, falta responsividade

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
     </section>
 
-    <!-- <section class="info">
+    <section class="info">
         <main class="info-bg">
             <div class="itens-flex-info">
             <div class="column-left-info">
@@ -81,10 +81,19 @@
                 <h1 class="h1-branco">você escolhe as<br>suas cores e<br> componentes<span>.</span></h1>
                 <p class="texto-alternativo-cinza">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
                 <a class="texto-amarelo-bold" href="#">ESCOLHA UM MODELO</a>
+
+            <div class="componentes">
                 <div class="componentes-tecnologia">
                     <p class="texto-pequeno-branco">Motor Elétrico</p>
                     <span>Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</span>
+                    </div>  
+
+                <div class="componentes-tecnologia2">
+                    <p class="texto-pequeno-branco">Rastreador</p>
+                    <span>Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</span>
                 </div>
+                </div>
+    
             </div>
             <div class="img-tecnologia">
             <img class="img-tecnologia" src="./img/fotos/tecnologia.jpg" alt="">
@@ -92,7 +101,7 @@
             </div>
         </main>
 
-    </section> -->
+    </section>
 
     
 </body>
