--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </header>
 
-    <main class="main-bg">
+    <!-- <main class="main-bg">
         <div class="main">
             <div class="content-main">
                 <div class="column-left">
@@ -71,9 +71,9 @@
 
             
         </div>
-    </section>
+    </section> -->
 
-    <section class="info">
+    <!-- <section class="info">
         <main class="info-bg">
             <div class="itens-flex-info">
             <div class="column-left-info">
