GRID INTRODUÇÃO 100% RESPONSIVA

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </header>
 
-    <!-- <main class="main-bg">
+<main class="main-bg">
         <div class="main">
             <div class="content-main">
                 <div class="column-left">
@@ -44,7 +44,7 @@
         </div>
     </main>
 
-    <section class="content-bikes">
+    <!-- <section class="content-bikes">
         <div class="bikes">
             <h1 class="h1-preto">escolha a sua<span>.</span></h1>
             <div class="img-bikes">
