RESPONSIVIDADE 100% section-bikes

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </main>
 
-    <!-- <section class="content-bikes">
+     <section class="content-bikes">
         <div class="bikes">
             <h1 class="h1-preto">escolha a sua<span>.</span></h1>
             <div class="img-bikes">
@@ -71,7 +71,7 @@
 
             
         </div>
-    </section> -->
+    </section>
 
     <!-- <section class="info">
         <main class="info-bg">
