RESPONSIVIDADE 100% section-info

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
     </section>
 
-    <!-- <section class="info">
+     <section class="info">
         <main class="info-bg">
             <div class="itens-flex-info">
             <div class="column-left-info">
@@ -95,7 +95,7 @@
                 </div>
     
             </div>
-            <div class="img-tecnologia">
+            <div class="contain-img-tecnologia">
             <img class="img-tecnologia" src="./img/fotos/tecnologia.jpg" alt="">
             </div>
             </div>
