--- a/index.html
+++ b/index.html
@@ -103,6 +103,23 @@
 
     </section>
 
+    <section class="section-parcerias">
+        <div class="content-parcerias">
+            <h1 class="h1-preto">nossos parceiros<span>.</span></h1>
+        
+        <ul class="parcerias">
+            <li><img src="./img/parceiros/caravan.svg" alt=""></li>
+            <li><img src="./img/parceiros/ranek.svg" alt=""></li>
+            <li><img src="./img/parceiros/handel.svg" alt=""></li>
+            <li><img src="./img/parceiros/dogs.svg" alt=""></li>
+            <li><img src="./img/parceiros/lescone.svg" alt=""></li>
+            <li><img src="./img/parceiros/flexblog.svg" alt=""></li>
+            <li><img src="./img/parceiros/wildbeast.svg" alt=""></li>
+            <li><img src="./img/parceiros/surfbot.svg" alt=""></li>
+        </ul>
+        </div>
+    </section>
+
     
 </body>
 </html>
