Iniciei a section-motivacional

--- a/index.html
+++ b/index.html
@@ -120,6 +120,17 @@
         </div>
     </section>
 
+    <section class="motivacional">
+        <div class="content-motivacional">
+            <img src="./img/fotos/depoimento.jpg" alt="motivacional">
+        </div>
+        <div class="text-motivacional">
+            <p>Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.</p>
+            <span>Daniel Kayque</span>
+        </div>
+
+    </section>
+
     
 </body>
 </html>
