section-motion 100% responsivo

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         <!-- Roboto -->
+
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wdth,wght@0,18..144,87.5,300..900;1,18..144,87.5,300..900&display=swap" rel="stylesheet">
+        <!-- Merriweather -->
+
 </head>
 <body>
     <header class="header-bg">
@@ -120,7 +124,7 @@
         </div>
     </section>
 
-    <section class="motivacional">
+    <section class="section-motivacional">
         <div class="content-motivacional">
             <img src="./img/fotos/depoimento.jpg" alt="motivacional">
         </div>
