--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
     </section>
 
-    <section class="section-seguros">
+    <!-- <section class="section-seguros">
         <div class="h1-seguros">
         <h1 class="h1-branco">seguros<span>.</span></h1>
         </div>
@@ -168,8 +168,42 @@
                <button class="btn-style">INSCREVA-SE</button>
             </div>
         </div>
-    </section>
+    </section> -->
 
+    <section class="section-seguros1">
+        <div class="content-seguros">
+            <h1 class="h1-branco">seguros<span>.</span></h1>
+        <div class="seguros-prata-ouro">
+            <div class="seguros-prata">
+                <h2>PRATA</h2>
+                <div class="preco">
+               <p>R$ 199</p>
+               <span>mensal</span>
+               </div> 
+               <p>Duas trocas por ano</p>
+               <p>Assistência Técnica</p>
+               <p>Suporte 08h às 18h</p>
+               <p>Cobertura Estadual</p>
+               <button class="btn-style">INSCREVA-SE</button>
+            </div>
+
+            <div class="seguros-ouro">
+               <h2>OURO</h2>
+               <div class="preco">
+               <p>R$ 299</p>
+               <span>mensal</span>
+               </div> 
+               <p>Cinco trocas por ano</p>
+               <p>Assistência Especial</p>
+               <p>Suporte 24h</p>
+               <p>Cobertura Nacional</p>
+               <p>Desconto em parceiros</p>
+               <p>Acesso ao Clube Bikcraft</p>
+               <button class="btn-style">INSCREVA-SE</button>
+            </div>
+        </div>
+        </div>
+    </section>
     
 </body>
 </html>
