ALTEREI O BOTÃO CINZA, alinhei os itens ao centro com display flex na section, e aumentei o tamanho dos botões

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                <p>Assistência Técnica</p>
                <p>Suporte 08h às 18h</p>
                <p>Cobertura Estadual</p>
-               <button class="btn-style">INSCREVA-SE</button>
+               <button class="btn-style-cinza">INSCREVA-SE</button>
             </div>
 
             <div class="seguros-ouro">
