100% responsivo a section-seguros, já adcionei o elemento after no content seguros

--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
                <p>R$ 199</p>
                <span>mensal</span>
                </div> 
-               <p>Duas trocas por ano</p>
-               <p>Assistência Técnica</p>
-               <p>Suporte 08h às 18h</p>
-               <p>Cobertura Estadual</p>
+               <p><img src="./img/icons8-selecionado.svg" alt="">Duas trocas por ano</p>
+               <p><img src="./img/icons8-selecionado.svg" alt="">Assistência Técnica</p>
+               <p><img src="./img/icons8-selecionado.svg" alt="">Suporte 08h às 18h</p>
+               <p><img src="./img/icons8-selecionado.svg" alt="">Cobertura Estadual</p>
                <button class="btn-style-cinza">INSCREVA-SE</button>
             </div>
 
@@ -193,12 +193,12 @@
                <p>R$ 299</p>
                <span>mensal</span>
                </div> 
-               <p>Cinco trocas por ano</p>
-               <p>Assistência Especial</p>
-               <p>Suporte 24h</p>
-               <p>Cobertura Nacional</p>
-               <p>Desconto em parceiros</p>
-               <p>Acesso ao Clube Bikcraft</p>
+               <p><img src="./img/icons8-selecionado.svg" alt="">Cinco trocas por ano</p>
+               <p><img src="./img/icons8-selecionado.svg" alt="">Assistência Especial</p>
+               <p><img src="./img/icons8-selecionado.svg" alt="">Suporte 24h</p>
+               <p><img src="./img/icons8-selecionado.svg" alt="">Cobertura Nacional</p>
+               <p><img src="./img/icons8-selecionado.svg" alt="">Desconto em parceiros</p>
+               <p><img src="./img/icons8-selecionado.svg" alt="">Acesso ao Clube Bikcraft</p>
                <button class="btn-style">INSCREVA-SE</button>
             </div>
         </div>
