footer 100% completo. Falta responsividade

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wdth,wght@0,18..144,87.5,300..900;1,18..144,87.5,300..900&display=swap" rel="stylesheet">
         <!-- Merriweather -->
 
+    <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css">
+            <!-- Icones flaticon  -->
+
 </head>
 <body>
     <header class="header-bg">
@@ -204,6 +207,32 @@
         </div>
         </div>
     </section>
+
+    <footer>
+        <div class="content-footer">
+            <h2>bikcraft</h2>
+            <div class="contato">
+                <h2>CONTATO</h2>
+                <p>+55 11 982862872</p>
+                <p>daanielkayque@gmail.com</p>
+                <p class="address">São Paulo - SP</p>
+                <div class="redes-sociais">
+                <i class="fi fi-brands-instagram"></i>
+                <i class="fi fi-brands-facebook"></i>
+                <i class="fi fi-brands-youtube"></i>
+                </div>
+            </div>
+            <div class="informacoes">
+                <h2>INFORMAÇÕES</h2>
+                <a href="#">Bicicletas</a>
+                <a href="#">Seguros</a>
+                <a href="#">Contato</a>
+                <a href="#">Termos e Condições</a>
+            </div>
+
+            
+        </div>
+    </footer>
     
 </body>
 </html>
