--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
         <nav>
             <ul class="header-menu">
-                <li><a href="#">Bicicletas</a></li>
-                <li><a href="#">Seguros</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="#bicicleta">Bicicletas</a></li>
+                <li><a href="#seguros">Seguros</a></li>
+                <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
         </div>
@@ -51,7 +51,7 @@
         </div>
     </main>
 
-     <section class="content-bikes">
+     <section id="bicicleta" class="content-bikes">
         <div class="bikes">
             <h1 class="h1-preto">escolha a sua<span>.</span></h1>
             <div class="img-bikes">
@@ -138,42 +138,7 @@
 
     </section>
 
-    <!-- <section class="section-seguros">
-        <div class="h1-seguros">
-        <h1 class="h1-branco">seguros<span>.</span></h1>
-        </div>
-        <div class="content-seguros">
-            <div class="seguros-prata">
-               <h2>PRATA</h2>
-               <div class="preco">
-               <p>R$ 199</p>
-               <span>mensal</span>
-               </div> 
-               <p>Duas trocas por ano</p>
-               <p>Assistência Técnica</p>
-               <p>Suporte 08h às 18h</p>
-               <p>Cobertura Estadual</p>
-               <button class="btn-style">INSCREVA-SE</button>
-            </div>
-
-            <div class="seguros-ouro">
-               <h2 class="ouro">OURO</h2>
-               <div class="preco">
-               <p>R$ 299</p>
-               <span>mensal</span>
-               </div> 
-               <p>Cinco trocas por ano</p>
-               <p>Assistência Especial</p>
-               <p>Suporte 24h</p>
-               <p>Cobertura Nacional</p>
-               <p>Desconto em parceiros</p>
-               <p>Acesso ao Clube Bikcraft</p>
-               <button class="btn-style">INSCREVA-SE</button>
-            </div>
-        </div>
-    </section> -->
-
-    <section class="section-seguros1">
+    <section id="seguros" class="section-seguros1">
         <div class="content-seguros">
             <h1 class="h1-branco">seguros<span>.</span></h1>
         <div class="seguros-prata-ouro">
@@ -208,7 +173,7 @@
         </div>
     </section>
 
-    <footer>
+    <footer id="contato">
         <div class="content-footer">
             <h2>bikcraft</h2>
             <div class="contato">
@@ -225,8 +190,8 @@
             <div class="informacoes">
                 <h2>INFORMAÇÕES</h2>
                 <a href="#">Bicicletas</a>
-                <a href="#">Seguros</a>
-                <a href="#">Contato</a>
+                <a href="#seguros">Seguros</a>
+                <a href="#contato">Contato</a>
                 <a href="#">Termos e Condições</a>
             </div>
 
