Iniciei a pagina bicicleta.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bikcraft | Home</title>
     <link rel="stylesheet" href="style.css">
 
 
@@ -27,7 +27,7 @@
 
         <nav>
             <ul class="header-menu">
-                <li><a href="#bicicleta">Bicicletas</a></li>
+                <li><a href="./bicicleta.html">Bicicletas</a></li>
                 <li><a href="#seguros">Seguros</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
@@ -173,7 +173,7 @@
         </div>
     </section>
 
-    <footer id="contato">
+    <footer class="footer-style" id="contato">
         <div class="content-footer">
             <h2>bikcraft</h2>
             <div class="contato">
@@ -189,7 +189,7 @@
             </div>
             <div class="informacoes">
                 <h2>INFORMAÇÕES</h2>
-                <a href="#">Bicicletas</a>
+                <a href="./bicicleta.html">Bicicletas</a>
                 <a href="#seguros">Seguros</a>
                 <a href="#contato">Contato</a>
                 <a href="#">Termos e Condições</a>
