Testes sobre os article de bicicleta.html

--- a/bicicleta.html
+++ b/bicicleta.html
@@ -27,5 +27,67 @@
             <H1 class="h1-branco">nossas bicicletas<span>.</span></H1>
         </div>
     </article>
+
+    <article class="article-bikes">
+        <div class="article-bike1">
+            <img src="./img/bicicleta/nimbus1.jpg" alt="bike1">
+            <div class="text-bike1">
+            <h2>Nimbus Stark</h2>
+            <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+
+            <nav class="item-bike1">
+                <p>Motor Elétrico</p>
+                <p>Fibra de Cabrbono</p>
+                <p>40 Km/h</p>
+                <div class="itens-button">
+                <p>Rastreador</p>
+                <button class="btn-style">MAIS SOBRE -></button>
+                </div>
+            </nav>
+
+            
+            </div>
+        </div>
+
+        <div class="section-bike2">
+        <div class="article-bike1">
+            <img src="./img/bicicleta/nimbus2.jpg" alt="bike1">
+            <div class="text-bike1">
+            <h2>Magic Might</h2>
+            <p>A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+
+            <nav class="item-bike1">
+                <p>Motor Elétrico</p>
+                <p>Fibra de Cabrbono</p>
+                <p>40 Km/h</p>
+                <div class="itens-button">
+                <p>Rastreador</p>
+                <button class="btn-style">MAIS SOBRE -></button>
+                </div>
+            </nav>
+            </div>
+        </div>
+        </div>
+
+        <div class="article-bike1">
+            <img src="./img/bicicleta/nimbus3.jpg" alt="bike1">
+            <div class="text-bike1">
+            <h2>Nebula Cosmic</h2>
+            <p>A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+
+            <nav class="item-bike1">
+                <p>Motor Elétrico</p>
+                <p>Fibra de Cabrbono</p>
+                <p>40 Km/h</p>
+                <div class="itens-button">
+                <p>Rastreador</p>
+                <button class="btn-style">MAIS SOBRE -></button>
+                </div>
+            </nav>
+
+            
+            </div>
+        </div>
+    </article>
 </body>
 </html>
