icones adicionado, dec adicionado. Começando processo responsivo

--- a/bicicleta.html
+++ b/bicicleta.html
@@ -25,7 +25,7 @@
     <article>
         <div class="cta-article">
             <p class="texto-alternativo-cinza">ESCOLHA A MELHOR PARA VOCÊ</p>
-            <H1 class="h1-branco">nossas bicicletas<span>.</span></H1>
+            <h1 class="h1-branco">nossas bicicletas<span>.</span></H1>
         </div>
     </article>
 
@@ -36,15 +36,23 @@
             <h2>Nimbus Stark</h2>
             <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
 
-            <nav class="item-bike1">
+            <div class="eletrica">
                 <p>Motor Elétrico</p>
-                <p>Fibra de Cabrbono</p>
+                </div>
+
+                <div class="carbono">
+                <p>Fibra de Carbono</p>
+                </div>
+
+                <div class="velocidade">
                 <p>40 Km/h</p>
+                </div>
                 <div class="itens-button">
+                <div class="rastreador">
                 <p>Rastreador</p>
+                </div>
                 <button class="btn-style">MAIS SOBRE -></button>
                 </div>
-            </nav>
 
             
             </div>
@@ -57,15 +65,23 @@
             <h2>Magic Might</h2>
             <p>A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
 
-            <nav class="item-bike1">
+            <div class="eletrica">
                 <p>Motor Elétrico</p>
-                <p>Fibra de Cabrbono</p>
+                </div>
+
+                <div class="carbono">
+                <p>Fibra de Carbono</p>
+                </div>
+
+                <div class="velocidade">
                 <p>40 Km/h</p>
+                </div>
                 <div class="itens-button">
+                <div class="rastreador">
                 <p>Rastreador</p>
+                </div>
                 <button class="btn-style">MAIS SOBRE -></button>
                 </div>
-            </nav>
             </div>
         </div>
         </div>
@@ -77,11 +93,21 @@
             <p>A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
 
             <nav class="item-bike1">
+                <div class="eletrica">
                 <p>Motor Elétrico</p>
-                <p>Fibra de Cabrbono</p>
+                </div>
+
+                <div class="carbono">
+                <p>Fibra de Carbono</p>
+                </div>
+
+                <div class="velocidade">
                 <p>40 Km/h</p>
+                </div>
                 <div class="itens-button">
+                <div class="rastreador">
                 <p>Rastreador</p>
+                </div>
                 <button class="btn-style">MAIS SOBRE -></button>
                 </div>
             </nav>
