adicionei a imagem num container, fixei o preço, agora iremos iniciar responsividade. LAYOUT 100%

--- a/bicicleta2.html
+++ b/bicicleta2.html
@@ -32,8 +32,9 @@
     <main class="main-principal">
         <div class="bicicletas">
             <div class="content-bicicletas">
+                <div class="imagem-container">
                     <img src="./img/bicicleta/nimbus1.jpg" alt="Nimbus1">
-                    <span class="preco-bike">R$ 2499</span>
+                    <span class="preco-bike">R$ 2499</span></div>
                 <div class="textos-bike1">
                     <h2 class="h2-name-bikes">Magic Might</h2>
                     <p class="description">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
