footer adicionado, bicicleta2 renomeada para bicicleta.html. 100% RESPONSIVO

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
     <footer class="footer-style" id="contato">
         <div class="content-footer">
-            <h2>bikcraft</h2>
+            <h2><a href="./index.html">bikcraft</a></h2>
             <div class="contato">
                 <h2>CONTATO</h2>
                 <p>+55 11 982862872</p>
