--- a/bicicleta.html
+++ b/bicicleta.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bikcraft | Bicicletas</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style-pag-bike.css">
 </head>
 <body>
-    <header class="header-bg">
+    <header id="#bicicleta" class="header-bg">
         <div class="header">
         <h1><a href="./">bikcraft</a></h1>
 
@@ -137,7 +136,7 @@
 
     <footer class="footer-style" id="contato">
         <div class="content-footer">
-            <h2><a href="./bicicleta.html">bikcraft</a></h2>
+            <h2><a href="#">bikcraft</a></h2>
             <div class="contato">
                 <h2>CONTATO</h2>
                 <p>+55 11 982862872</p>
@@ -151,9 +150,9 @@
             </div>
             <div class="informacoes">
                 <h2>INFORMAÇÕES</h2>
-                <a href="./bicicleta.html">Bicicletas</a>
-                <a href="#seguros">Seguros</a>
-                <a href="#contato">Contato</a>
+                <a href="#">Bicicletas</a>
+                <a href="#">Seguros</a>
+                <a href="#">Contato</a>
                 <a href="#">Termos e Condições</a>
             </div>
 
