responsividade 100% section-vantagens-seguros. Iniciando a criação de section-perguntas

--- a/seguros.html
+++ b/seguros.html
@@ -64,6 +64,7 @@
 
     <section class="vantagens-seg">
         <div class="content-vantagens">
+            <div class="container-vantagens">
             <h1 class="h1-branco-no-details">nossas vantagens<span>.</span></h1>
             <div class="grid-vantagens">
                 <div class="reparo">
@@ -96,6 +97,7 @@
                 <p class="texto-seguros">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
                 </div>
             </div>
+        </div>
         </div>
     </section>
     
