perguntas adicionadas. Falta responsividade, centralizar o conteudo.

--- a/seguros.html
+++ b/seguros.html
@@ -100,6 +100,39 @@
         </div>
         </div>
     </section>
+
+    <section class="section-perguntas">
+        <div class="container-perguntas">
+            <div class="content-perguntas">
+                <h1 class="h1-preto">perguntas frequentes<span>.</span></h1>
+                <div class="lista-perguntas">
+                        <ul class="list-perguntas">
+                            <li><span>Qual a forma de pagamento que vocês aceitam?</span>
+                                <p>Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+                            </li>
+                            <li><span>Qual a forma de pagamento que vocês aceitam?</span>
+                            </li>
+
+                            <li><span>Como posso entrar em contato?</span>
+                            </li>
+                            <li><span>Vocês possuem algum desconto?</span>
+                            </li>
+
+                            <li><span>Qual a garantia que possuo?</span>
+                            </li>
+                            <li><span>Posso parcelar no boleto?</span>
+                            </li>
+
+                            <li><span>Quantas trocas posso fazer ao ano?</span>
+                            </li> 
+                            
+                            <li><span>Qual bikcraft devo escolher para meu tamanho?</span>
+                            </li>  
+                        </ul>
+                </div>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
