teste, formulario ta feito. Porém não gostei. Irei refazer o HTML

--- a/seguros.html
+++ b/seguros.html
@@ -111,22 +111,29 @@
                                 <p>Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
                             </li>
                             <li><span class="question-list">Qual a forma de pagamento que vocês aceitam?</span>
+                                <p>Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
                             </li>
 
                             <li><span class="question-list">Como posso entrar em contato?</span>
+                                <p>Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
                             </li>
                             <li><span class="question-list">Vocês possuem algum desconto?</span>
+                                <p>Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
                             </li>
 
                             <li><span class="question-list">Qual a garantia que possuo?</span>
+                                <p>Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
                             </li>
                             <li><span class="question-list">Posso parcelar no boleto?</span>
+                                <p>Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
                             </li>
 
                             <li><span class="question-list">Quantas trocas posso fazer ao ano?</span>
+                                <p>Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
                             </li> 
                             
                             <li><span class="question-list">Qual bikcraft devo escolher para meu tamanho?</span>
+                                <p>Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
                             </li>  
                         </ul>
                 </div>
