--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <nav>
             <ul class="header-menu">
                 <li><a href="./bicicleta.html">Bicicletas</a></li>
-                <li><a href="#seguros">Seguros</a></li>
-                <li><a href="#contato">Contato</a></li>
+                <li><a href="./seguros.html">Seguros</a></li>
+                <li><a href="./contato.html">Contato</a></li>
             </ul>
         </nav>
         </div>
