responsividade 100% no contato.html. Feito até o formulario. Pagina não está completa

--- a/bicicleta.html
+++ b/bicicleta.html
@@ -150,9 +150,9 @@
             </div>
             <div class="informacoes">
                 <h2>INFORMAÇÕES</h2>
-                <a href="#">Bicicletas</a>
-                <a href="#">Seguros</a>
-                <a href="#">Contato</a>
+                <a href="./">Bicicletas</a>
+                <a href="./seguros.html">Seguros</a>
+                <a href="./contato.html">Contato</a>
                 <a href="#">Termos e Condições</a>
             </div>
 
