--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
             <div class="informacoes">
                 <h2>INFORMAÇÕES</h2>
                 <a href="./bicicleta.html">Bicicletas</a>
-                <a href="#seguros">Seguros</a>
-                <a href="#contato">Contato</a>
+                <a href="./seguros.html">Seguros</a>
+                <a href="./contato.html">Contato</a>
                 <a href="#">Termos e Condições</a>
             </div>
 
