--- a/seguros.html
+++ b/seguros.html
@@ -14,8 +14,8 @@
         <nav>
             <ul class="header-menu">
                 <li><a href="./bicicleta.html">Bicicletas</a></li>
-                <li><a href="#seguros">Seguros</a></li>
-                <li><a href="#contato">Contato</a></li>
+                <li><a href="./">Seguros</a></li>
+                <li><a href="./contato.html">Contato</a></li>
             </ul>
         </nav>
         </div>
@@ -158,8 +158,8 @@
             <div class="informacoes">
                 <h2>INFORMAÇÕES</h2>
                 <a href="./bicicleta.html">Bicicletas</a>
-                <a href="#seguros">Seguros</a>
-                <a href="#contato">Contato</a>
+                <a href="./seguros.html">Seguros</a>
+                <a href="./contato.html">Contato</a>
                 <a href="#">Termos e Condições</a>
             </div>
 
