testando um display grid no contato.html

--- a/contato.html
+++ b/contato.html
@@ -72,6 +72,39 @@
                     </form>
                 </div>
     </main>
-    
+
+    <section class="section-lojas">
+            <div class="grid-container">
+                <h1 class="h1-preto">lojas locais<span>.</span></h1>
+                <div class="lojas-item">
+                    <img src="./img/lojas/rj.jpg" alt="loja rio de janeiro">
+                    <div class="lojas-conteudo">
+                    <div class="dados-lojas">
+                        <p>Rua Ali Perto, 25</p>
+                        <p>Rio de janeiro - RJ</p>
+                    </div>
+                    <div class="dados-lojas2">
+                        <p>daanielkayque@gmail.com</p>
+                        <p>11 982862872</p>
+                        </div>
+                    </div>
+                    </div>
+
+                    <div class="lojas-item">
+                    <img src="./img/lojas/sp.jpg" alt="loja são paulo">
+                    <div class="lojas-conteudo">
+                    <div class="dados-lojas">
+                        <p>Rua Ali Perto, 25</p>
+                        <p>São Paulo - SP</p>
+                    </div>
+                    <div class="dados-lojas2">
+                        <p>daanielkayque@gmail.com</p>
+                        <p>11 982862872</p>
+                        </div>
+                    </div>
+                </div>
+        </div>
+    </section>
+
 </body>
 </html>
