tornando responsivo, arrumado bugs do 1fr não funconar. Falta responsividade de 1fr somente.

--- a/contato.html
+++ b/contato.html
@@ -79,9 +79,11 @@
                 <div class="lojas-item">
                     <img src="./img/lojas/rj.jpg" alt="loja rio de janeiro">
                     <div class="lojas-conteudo">
+                        <h2>Rio de Janeiro</h2>
                     <div class="dados-lojas">
                         <p>Rua Ali Perto, 25</p>
                         <p>Rio de janeiro - RJ</p>
+                        <span>08 - 18h de seg à dom</span>
                     </div>
                     <div class="dados-lojas2">
                         <p>daanielkayque@gmail.com</p>
@@ -90,12 +92,14 @@
                     </div>
                     </div>
 
-                    <div class="lojas-item">
+                    <div class="lojas-item2">
                     <img src="./img/lojas/sp.jpg" alt="loja são paulo">
                     <div class="lojas-conteudo">
+                        <h2>São Paulo</h2>
                     <div class="dados-lojas">
                         <p>Rua Ali Perto, 25</p>
                         <p>São Paulo - SP</p>
+                        <span>08 - 18h de seg à dom</span>
                     </div>
                     <div class="dados-lojas2">
                         <p>daanielkayque@gmail.com</p>
