responsividade 100%. Página contato.html 100% finalizada com footer já adicionado e margin bottom 120px

--- a/contato.html
+++ b/contato.html
@@ -16,8 +16,8 @@
         <nav>
             <ul class="header-menu">
                 <li><a href="./bicicleta.html">Bicicletas</a></li>
-                <li><a href="#seguros">Seguros</a></li>
-                <li><a href="#contato">Contato</a></li>
+                <li><a href="./seguros.html">Seguros</a></li>
+                <li><a href="./contato.html">Contato</a></li>
             </ul>
         </nav>
         </div>
@@ -109,6 +109,32 @@
                 </div>
         </div>
     </section>
+
+    <footer class="footer-style" id="contato">
+        <div class="content-footer">
+            <h2><a href="#">bikcraft</a></h2>
+            <div class="contato">
+                <h2>CONTATO</h2>
+                <p>+55 11 982862872</p>
+                <p>daanielkayque@gmail.com</p>
+                <p class="address">São Paulo - SP</p>
+                <div class="redes-sociais">
+                <i class="fi fi-brands-instagram"></i>
+                <i class="fi fi-brands-facebook"></i>
+                <i class="fi fi-brands-youtube"></i>
+                </div>
+            </div>
+            <div class="informacoes">
+                <h2>INFORMAÇÕES</h2>
+                <a href="./">Bicicletas</a>
+                <a href="./seguros.html">Seguros</a>
+                <a href="./contato.html">Contato</a>
+                <a href="#">Termos e Condições</a>
+            </div>
+
+            
+        </div>
+    </footer>
 
 </body>
 </html>
