--- a/bicicleta.html
+++ b/bicicleta.html
@@ -153,7 +153,7 @@
                 <a href="./">Bicicletas</a>
                 <a href="./seguros.html">Seguros</a>
                 <a href="./contato.html">Contato</a>
-                <a href="#">Termos e Condições</a>
+                <a href="./condicoes.html">Termos e Condições</a>
             </div>
 
             
