--- a/contato.html
+++ b/contato.html
@@ -128,8 +128,8 @@
                 <h2>INFORMAÇÕES</h2>
                 <a href="./">Bicicletas</a>
                 <a href="./seguros.html">Seguros</a>
-                <a href="./contato.html">Contato</a>
-                <a href="#">Termos e Condições</a>
+                <a href="#">Contato</a>
+                <a href="./condicoes.html">Termos e Condições</a>
             </div>
 
             
