--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <a href="./bicicleta.html">Bicicletas</a>
                 <a href="./seguros.html">Seguros</a>
                 <a href="./contato.html">Contato</a>
-                <a href="#">Termos e Condições</a>
+                <a href="./condicoes.html">Termos e Condições</a>
             </div>
 
             
