--- a/seguros.html
+++ b/seguros.html
@@ -158,9 +158,9 @@
             <div class="informacoes">
                 <h2>INFORMAÇÕES</h2>
                 <a href="./bicicleta.html">Bicicletas</a>
-                <a href="./seguros.html">Seguros</a>
+                <a href="#">Seguros</a>
                 <a href="./contato.html">Contato</a>
-                <a href="#">Termos e Condições</a>
+                <a href="./condicoes.html">Termos e Condições</a>
             </div>
 
             
