site 100% responsivo, bugs corrigidos, footer com padding e margin bottom em main-orcamento

--- a/orcamento.html
+++ b/orcamento.html
@@ -33,7 +33,7 @@
             <form action="./" class="form-radio">
                 <p class="texto-alternativo-cinza-small">BIKCRAFT OU SEGURO?</p>
 
-                <div class="bikcraft-checked">
+                <div class="bikcraft-checked col-2">
                 <input type="radio" name="bikcraft-seguro" id="bikcraft">
                 <label for="bikcraft">Bikcraft</label>
 
@@ -43,22 +43,22 @@
                 <div class="bikes-lista">
                 <p class="texto-alternativo-cinza-small">ESCOLHA A SUA:</p>
                 <input type="radio" name="bikcraft-bike" id="nimbus">
-                <label for="nimbus">Nimbus Stark</label>
+                <label for="nimbus">Nimbus Stark <span>R$ 4999</span></label>
 
                 <input type="radio" name="bikcraft-bike" id="magic">
-                <label for="magic">Magic Might</label>
+                <label for="magic">Magic Might <span>R$ 2499</span></label>
 
                 <input type="radio" name="bikcraft-bike" id="nebula">
-                <label for="nebula">Nebula Cosmic</label>
+                <label for="nebula">Nebula Cosmic <span>R$ 3999</span></label>
                 </div>
 
                 <div class="planos">
                 <p class="texto-alternativo-cinza-small">ESCOLHA UM PLANO:</p>
                 <input type="radio" name="seguro" id="prata">
-                <label for="prata">Prata</label>
+                <label for="prata">Prata<span>R$ 199</span></label>
 
                 <input type="radio" name="seguro" id="ouro">
-                <label for="ouro">Ouro</label>
+                <label for="ouro">Ouro<span>R$ 299</span></label>
                 </div>     
                 </div>
 
