footer com mailto e tel. Mais acessivel e mais responsivel, adicionado em todos html

--- a/contato.html
+++ b/contato.html
@@ -112,27 +112,27 @@
 
     <footer class="footer-style" id="contato">
         <div class="content-footer">
-            <h2><a href="#">bikcraft</a></h2>
+            <h2><a href="./index.html">bikcraft</a></h2>
             <div class="contato">
                 <h2>CONTATO</h2>
-                <p>+55 11 982862872</p>
-                <p>daanielkayque@gmail.com</p>
+                <a href="tel:+5511982862872">+55 11 98286-2872</a>
+                <a href="mailto:daanielkayque@gmail.com">daanielkayque@gmail.com</a>
                 <p class="address">São Paulo - SP</p>
                 <div class="redes-sociais">
-                <i class="fi fi-brands-instagram"></i>
-                <i class="fi fi-brands-facebook"></i>
-                <i class="fi fi-brands-youtube"></i>
+                    <i class="fi fi-brands-instagram"></i>
+                    <i class="fi fi-brands-facebook"></i>
+                    <i class="fi fi-brands-youtube"></i>
                 </div>
             </div>
             <div class="informacoes">
                 <h2>INFORMAÇÕES</h2>
-                <a href="./">Bicicletas</a>
+                <a href="./bicicleta.html">Bicicletas</a>
                 <a href="./seguros.html">Seguros</a>
-                <a href="#">Contato</a>
+                <a href="./contato.html">Contato</a>
                 <a href="./condicoes.html">Termos e Condições</a>
             </div>
 
-            
+
         </div>
     </footer>
 
