--- a/index.html
+++ b/index.html
@@ -61,20 +61,20 @@
             <h1 class="h1-preto">escolha a sua<span>.</span></h1>
             <div class="img-bikes">
                 <div class="quadrado-bikes">
-                    <img class="img-bike-pequena" src="./img/bicicleta/nimbus2.jpg" alt="Bicicleta">
+                    <a href="./orcamento.html"><img class="img-bike-pequena" src="./img/bicicleta/nimbus2.jpg" alt="Bicicleta"></a>
                     <p class="texto-pequeno-preto"><span>.</span>Magic Might</p>
                     <p class="texto-alternativo-cinza-small">R$ 2499</p>
                 </div>
 
                 <div class="quadrado-bikes">
-                    <img class="img-bike-pequena" src="./img/bicicleta/nimbus1.jpg" alt="Bicicleta">
+                    <a href="./orcamento.html"><img class="img-bike-pequena" src="./img/bicicleta/nimbus1.jpg" alt="Bicicleta"></a>
                     <p class="texto-pequeno-preto"><span>.</span>Nimbus Stark</p>
                     <p class="texto-alternativo-cinza-small">R$ 2499</p>
 
                 </div>
 
                 <div class="quadrado-bikes">
-                    <img class="img-bike-pequena" src="./img/bicicleta/nimbus3.jpg" alt="Bicicleta">
+                    <a href="./orcamento.html"><img class="img-bike-pequena" src="./img/bicicleta/nimbus3.jpg" alt="Bicicleta"></a>
                     <p class="texto-pequeno-preto"><span>.</span>Nebula Cosmic</p>
                     <p class="texto-alternativo-cinza-small">R$ 2499</p>
 
@@ -94,7 +94,7 @@
                     <p class="texto-alternativo-cinza">Cada Bikcraft é única e possui a sua identidade. As medidas serão
                         exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você
                         pode também personalizar completamente as suas cores.</p>
-                    <a class="texto-amarelo-bold" href="#">ESCOLHA UM MODELO</a>
+                    <a class="texto-amarelo-bold" href="./bicicleta.html">ESCOLHA UM MODELO</a>
 
                     <div class="componentes">
                         <div class="componentes-tecnologia">
@@ -162,7 +162,7 @@
                     <p><img src="./img/icons8-selecionado.svg" alt="">Assistência Técnica</p>
                     <p><img src="./img/icons8-selecionado.svg" alt="">Suporte 08h às 18h</p>
                     <p><img src="./img/icons8-selecionado.svg" alt="">Cobertura Estadual</p>
-                    <a href="./seguros.html" class="btn-style-cinza">INSCREVA-SE</a>
+                    <a href="./orcamento.html" class="btn-style-cinza">INSCREVA-SE</a>
                 </div>
 
                 <div class="seguros-ouro">
@@ -177,7 +177,7 @@
                     <p><img src="./img/icons8-selecionado.svg" alt="">Cobertura Nacional</p>
                     <p><img src="./img/icons8-selecionado.svg" alt="">Desconto em parceiros</p>
                     <p><img src="./img/icons8-selecionado.svg" alt="">Acesso ao Clube Bikcraft</p>
-                    <a href="./seguros.html" class="btn-style">INSCREVA-SE</a>
+                    <a href="./orcamento.html" class="btn-style">INSCREVA-SE</a>
 
                 </div>
             </div>
@@ -189,8 +189,8 @@
             <h2><a href="./index.html">bikcraft</a></h2>
             <div class="contato">
                 <h2>CONTATO</h2>
-                <p>+55 11 982862872</p>
-                <p>daanielkayque@gmail.com</p>
+                <a href="tel:+5511982862872">+55 11 98286-2872</a>
+                <a href="mailto:daanielkayque@gmail.com">daanielkayque@gmail.com</a>
                 <p class="address">São Paulo - SP</p>
                 <div class="redes-sociais">
                     <i class="fi fi-brands-instagram"></i>
