--- a/seguros.html
+++ b/seguros.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bikcraft | Seguros</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header id="#bicicleta" class="header-bg">
         <div class="header">
-        <h1><a href="./">bikcraft</a></h1>
+            <h1><a href="./">bikcraft</a></h1>
 
-        <nav>
-            <ul class="header-menu">
-                <li><a href="./bicicleta.html">Bicicletas</a></li>
-                <li><a href="./">Seguros</a></li>
-                <li><a href="./contato.html">Contato</a></li>
-            </ul>
-        </nav>
+            <nav>
+                <ul class="header-menu">
+                    <li><a href="./bicicleta.html">Bicicletas</a></li>
+                    <li><a href="./">Seguros</a></li>
+                    <li><a href="./contato.html">Contato</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 
@@ -30,74 +32,81 @@
 
     <section id="seguros" class="section-seguros1">
         <div class="content-seguros">
-        <div class="seguros-prata-ouro">
-            <div class="seguros-prata">
-                <h2>PRATA</h2>
-                <div class="preco">
-               <p>R$ 199</p>
-               <span>mensal</span>
-               </div> 
-               <p><img src="./img/icons8-selecionado.svg" alt="">Duas trocas por ano</p>
-               <p><img src="./img/icons8-selecionado.svg" alt="">Assistência Técnica</p>
-               <p><img src="./img/icons8-selecionado.svg" alt="">Suporte 08h às 18h</p>
-               <p><img src="./img/icons8-selecionado.svg" alt="">Cobertura Estadual</p>
-               <button class="btn-style-cinza">INSCREVA-SE</button>
-            </div>
+            <div class="seguros-prata-ouro">
+                <div class="seguros-prata">
+                    <h2>PRATA</h2>
+                    <div class="preco">
+                        <p>R$ 199</p>
+                        <span>mensal</span>
+                    </div>
+                    <p><img src="./img/icons8-selecionado.svg" alt="">Duas trocas por ano</p>
+                    <p><img src="./img/icons8-selecionado.svg" alt="">Assistência Técnica</p>
+                    <p><img src="./img/icons8-selecionado.svg" alt="">Suporte 08h às 18h</p>
+                    <p><img src="./img/icons8-selecionado.svg" alt="">Cobertura Estadual</p>
+                    <a href="./orcamento.html" class="btn-style-cinza">INSCREVA-SE</a>
+                </div>
 
-            <div class="seguros-ouro">
-               <h2>OURO</h2>
-               <div class="preco">
-               <p>R$ 299</p>
-               <span>mensal</span>
-               </div> 
-               <p><img src="./img/icons8-selecionado.svg" alt="">Cinco trocas por ano</p>
-               <p><img src="./img/icons8-selecionado.svg" alt="">Assistência Especial</p>
-               <p><img src="./img/icons8-selecionado.svg" alt="">Suporte 24h</p>
-               <p><img src="./img/icons8-selecionado.svg" alt="">Cobertura Nacional</p>
-               <p><img src="./img/icons8-selecionado.svg" alt="">Desconto em parceiros</p>
-               <p><img src="./img/icons8-selecionado.svg" alt="">Acesso ao Clube Bikcraft</p>
-               <button class="btn-style">INSCREVA-SE</button>
+                <div class="seguros-ouro">
+                    <h2>OURO</h2>
+                    <div class="preco">
+                        <p>R$ 299</p>
+                        <span>mensal</span>
+                    </div>
+                    <p><img src="./img/icons8-selecionado.svg" alt="">Cinco trocas por ano</p>
+                    <p><img src="./img/icons8-selecionado.svg" alt="">Assistência Especial</p>
+                    <p><img src="./img/icons8-selecionado.svg" alt="">Suporte 24h</p>
+                    <p><img src="./img/icons8-selecionado.svg" alt="">Cobertura Nacional</p>
+                    <p><img src="./img/icons8-selecionado.svg" alt="">Desconto em parceiros</p>
+                    <p><img src="./img/icons8-selecionado.svg" alt="">Acesso ao Clube Bikcraft</p>
+                    <a href="./orcamento.html" class="btn-style">INSCREVA-SE</a>
+
+                </div>
             </div>
-        </div>
         </div>
     </section>
 
     <section class="vantagens-seg">
         <div class="content-vantagens">
             <div class="container-vantagens">
-            <h1 class="h1-branco-no-details">nossas vantagens<span>.</span></h1>
-            <div class="grid-vantagens">
-                <div class="reparo">
-                <p class="texto-pequeno-branco">Reparo Elétrico</p>
-                <p class="texto-seguros">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que falhas são raras, mas estamos aqui para caso ocorra.</p>
-                </div>
+                <h1 class="h1-branco-no-details">nossas vantagens<span>.</span></h1>
+                <div class="grid-vantagens">
+                    <div class="reparo">
+                        <p class="texto-pequeno-branco">Reparo Elétrico</p>
+                        <p class="texto-seguros">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos
+                            que falhas são raras, mas estamos aqui para caso ocorra.</p>
+                    </div>
 
-                <div class="eletrico">
-                <p class="texto-pequeno-branco">Motor Elétrico</p>
-                <p class="texto-seguros">Nossos quadros são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.</p>
-                </div>
+                    <div class="eletrico">
+                        <p class="texto-pequeno-branco">Motor Elétrico</p>
+                        <p class="texto-seguros">Nossos quadros são feitos para durar para sempre. Mas caso algo ocorra,
+                            ficamos felizes em reparar.</p>
+                    </div>
 
-                <div class="sustentavel">
-                <p class="texto-pequeno-branco">sustentável</p>
-                <p class="texto-seguros">Trabalhamos com a filosofia de desperdício zero. Qualquer parte defeituosa é reciclada e reutilizada em outro projeto.</p>
-                </div>
+                    <div class="sustentavel">
+                        <p class="texto-pequeno-branco">sustentável</p>
+                        <p class="texto-seguros">Trabalhamos com a filosofia de desperdício zero. Qualquer parte
+                            defeituosa é reciclada e reutilizada em outro projeto.</p>
+                    </div>
 
-                <div class="recuperacao">
-                <p class="texto-pequeno-branco">Recuperação</p>
-                <p class="texto-seguros">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
-                </div>
+                    <div class="recuperacao">
+                        <p class="texto-pequeno-branco">Recuperação</p>
+                        <p class="texto-seguros">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela
+                            para ser reparada em uma das filiais.</p>
+                    </div>
 
-                <div class="seguranca">
-                <p class="texto-pequeno-branco">Segurança</p>
-                <p class="texto-seguros">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
-                </div>
+                    <div class="seguranca">
+                        <p class="texto-pequeno-branco">Segurança</p>
+                        <p class="texto-seguros">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela
+                            para ser reparada em uma das filiais.</p>
+                    </div>
 
-                <div class="rapidez">
-                <p class="texto-pequeno-branco">Rapidez</p>
-                <p class="texto-seguros">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
+                    <div class="rapidez">
+                        <p class="texto-pequeno-branco">Rapidez</p>
+                        <p class="texto-seguros">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela
+                            para ser reparada em uma das filiais.</p>
+                    </div>
                 </div>
             </div>
-        </div>
         </div>
     </section>
 
@@ -106,36 +115,44 @@
             <div class="content-perguntas">
                 <h1 class="h1-preto">perguntas frequentes<span>.</span></h1>
                 <div class="lista-perguntas">
-                        <ul class="list-perguntas">
-                            <li><span class="question-list">Qual a forma de pagamento que vocês aceitam?</span>
-                                <p>Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-                            </li>
-                            <li><span class="question-list">Qual a forma de pagamento que vocês aceitam?</span>
-                                <p>Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-                            </li>
+                    <ul class="list-perguntas">
+                        <li><span class="question-list">Qual a forma de pagamento que vocês aceitam?</span>
+                            <p>Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express.
+                                Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+                        </li>
+                        <li><span class="question-list">Qual a forma de pagamento que vocês aceitam?</span>
+                            <p>Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express.
+                                Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+                        </li>
 
-                            <li><span class="question-list">Como posso entrar em contato?</span>
-                                <p>Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-                            </li>
-                            <li><span class="question-list">Vocês possuem algum desconto?</span>
-                                <p>Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-                            </li>
+                        <li><span class="question-list">Como posso entrar em contato?</span>
+                            <p>Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express.
+                                Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+                        </li>
+                        <li><span class="question-list">Vocês possuem algum desconto?</span>
+                            <p>Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express.
+                                Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+                        </li>
 
-                            <li><span class="question-list">Qual a garantia que possuo?</span>
-                                <p>Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-                            </li>
-                            <li><span class="question-list">Posso parcelar no boleto?</span>
-                                <p>Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-                            </li>
+                        <li><span class="question-list">Qual a garantia que possuo?</span>
+                            <p>Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express.
+                                Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+                        </li>
+                        <li><span class="question-list">Posso parcelar no boleto?</span>
+                            <p>Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express.
+                                Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+                        </li>
 
-                            <li><span class="question-list">Quantas trocas posso fazer ao ano?</span>
-                                <p>Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-                            </li> 
-                            
-                            <li><span class="question-list">Qual bikcraft devo escolher para meu tamanho?</span>
-                                <p>Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-                            </li>  
-                        </ul>
+                        <li><span class="question-list">Quantas trocas posso fazer ao ano?</span>
+                            <p>Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express.
+                                Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+                        </li>
+
+                        <li><span class="question-list">Qual bikcraft devo escolher para meu tamanho?</span>
+                            <p>Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express.
+                                Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -150,22 +167,23 @@
                 <p>daanielkayque@gmail.com</p>
                 <p class="address">São Paulo - SP</p>
                 <div class="redes-sociais">
-                <i class="fi fi-brands-instagram"></i>
-                <i class="fi fi-brands-facebook"></i>
-                <i class="fi fi-brands-youtube"></i>
+                    <i class="fi fi-brands-instagram"></i>
+                    <i class="fi fi-brands-facebook"></i>
+                    <i class="fi fi-brands-youtube"></i>
                 </div>
             </div>
             <div class="informacoes">
                 <h2>INFORMAÇÕES</h2>
                 <a href="./bicicleta.html">Bicicletas</a>
-                <a href="#">Seguros</a>
+                <a href="./seguros.html">Seguros</a>
                 <a href="./contato.html">Contato</a>
                 <a href="./condicoes.html">Termos e Condições</a>
             </div>
 
-            
+
         </div>
     </footer>
     <!-- Finalizei -->
 </body>
+
 </html>
