alterado os nomes das bikes na bicicleta.html

--- a/bicicleta.html
+++ b/bicicleta.html
@@ -33,10 +33,10 @@
             <div class="content-bicicletas">
                 <div class="imagem-container">
                     <img src="./img/bicicleta/nimbus1.jpg" alt="Nimbus1">
-                    <span class="preco-bike">R$ 2499</span></div>
+                    <span class="preco-bike">R$ 4999</span></div>
                 <div class="textos-bike1">
-                    <h2 class="h2-name-bikes">Magic Might</h2>
-                    <p class="description">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+                    <h2 class="h2-name-bikes">Nimbus Stark</h2>
+                    <p class="description">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
                     <div class="especifications-bikes">
                     <div class="eletrica">
                     <p>Motor Elétrico</p>
@@ -103,10 +103,10 @@
             <div class="content-bicicletas">
                 <div class="imagem-container">
                     <img src="./img/bicicleta/nimbus3.jpg" alt="Nimbus3">
-                    <span class="preco-bike">R$ 2499</span></div>
+                    <span class="preco-bike">R$ 3999</span></div>
                 <div class="textos-bike1">
-                    <h2 class="h2-name-bikes">Magic Might</h2>
-                    <p class="description">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+                    <h2 class="h2-name-bikes">Nebula Cosmic</h2>
+                    <p class="description">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
                     <div class="especifications-bikes">
                     <div class="eletrica">
                     <p>Motor Elétrico</p>
